--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 						<h2>WORLD</h2>
 						<img src="images/world1.jpg">
 						<h3>Former Malaysia Deputy PM Ismail Sabri poised to win premiership race</h3>
-						<p>Muhyiddin Yassin resigned as prime minister on Monday after conceding he had lost support from his alliance, bringing to an end a fraught 17 months in office and throwing the country into further political chaos amidst a COVID-19 surge and economic slump. […]</p>
+						<p>Muhyiddin Yassin resigned as prime minister on Monday after conceding he had lost support from his alliance, bringing to an end a fraught 17 months in office and throwing the country into further political chaos amidst a COVID-19 surge and economic slump. ok […]</p>
 					</article>
 					<article class="sport">
 						<h2>covid-19</h2>
